Fix multiview plots taking too large

--- a/webview/src/plots/components/styles.module.scss
+++ b/webview/src/plots/components/styles.module.scss
@@ -112,6 +112,11 @@ $gap: 20px;
   max-height: 100%;
 }
 
+.plot.multiViewPlot {
+  max-width: 100%;
+  min-width: 0;
+}
+
 .sectionRenamer {
   background-color: transparent;
   font-size: 1.25rem;
